chore(deps): bump Paper to 26.2.build.40-alpha and runtime/processor/platform hardening